<resources>
    <string name="app_name">Car Care Go</string>
    <string name="app_version">Version 1.0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_cart_title">Cart</string>
    <string name="side_nav_my_orders_title">My Orders</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_settings_title">Settings</string>
    <string name="side_nav_logout_title">LogOut</string>
    <string name="side_nav_login_title">Login</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_explore_title">Explore</string>
    <string name="bottom_nav_booking_title">Booking</string>
    <string name="bottom_nav_shop_title">Shop</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="google_maps_key">AIzaSyDDSxFl1MC7O2znA7jL41g7y9LRVb11I8s</string>
</resources>