<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/bottom_nav_home" android:icon="@drawable/home_24px" android:title="@string/bottom_nav_home_title"/>
    <item android:id="@+id/bottom_nav_explore" android:icon="@drawable/explore_nearby_24px" android:title="@string/bottom_nav_explore_title"/>
    <item android:id="@+id/bottom_nav_booking" android:icon="@drawable/bookmark_bag_24px" android:title="@string/bottom_nav_booking_title"/>
    <item android:id="@+id/bottom_nav_shop" android:icon="@drawable/shopping_bag_24px" android:title="@string/bottom_nav_shop_title"/>
    <item android:id="@+id/bottom_nav_profile" android:icon="@drawable/account_circle_24px" android:title="@string/bottom_nav_profile_title"/>

</menu>